--- a/packages/goku/src/menu/_style.scss
+++ b/packages/goku/src/menu/_style.scss
@@ -10,11 +10,27 @@ $menu-item-disabled-background-color: $scheme-main !default;
   }
 
   .menu-item {
+    position: relative;
     display: block;
     padding: $menu-list-link-padding;
     border-radius: $menu-item-radius;
     color: $menu-item-color;
     cursor: pointer;
+
+    // &.menu-sub {
+    //   .menu-sub-list {
+    //     position: absolute;
+    //     left: 0;
+    //     bottom: $menu-list-line-height;
+    //     z-index: 1;
+    //     display: none;
+    //   }
+    // }
+    // &.menu-sub.is-opened {
+    //   .menu-sub-list {
+    //     display: block;
+    //   }
+    // }
 
     &:hover {
       background-color: $menu-item-hover-background-color;
