refactor: 重构前设置
affects: @dragon-ball/goku

--- a/packages/goku/src/styles/index.scss
+++ b/packages/goku/src/styles/index.scss
@@ -2,5 +2,5 @@
 
 @import 'variables';
 
-@import '../button/style';
-@import '../menu/style';
+@import '../button_old/style';
+@import '../menu_old/style';
