--- a/packages/goku/src/styles/index.scss
+++ b/packages/goku/src/styles/index.scss
@@ -1,6 +1,8 @@
 @import 'variables';
 @import 'bulma/bulma.sass';
-@import '~@fortawesome/fontawesome-free/css/all.css';
+// @import 'bulma'; 似乎同样有效
+@import '@fortawesome/fontawesome-free/css/all.css';
+// @import '~@fortawesome/fontawesome-free/css/all.css';
 
 @import '../Button/style';
 @import '../Icon/style';
