feat: 添加 Checkbox Group 组件
affects: @dragon-ball/goku

--- a/packages/goku/src/Checkbox/_style.scss
+++ b/packages/goku/src/Checkbox/_style.scss
@@ -80,3 +80,9 @@ $checkbox-inner-border-width: 2px !default;
     }
   }
 }
+
+.checkbox-group {
+  .checkbox:not(:first-child) {
+    margin-left: 1rem;
+  }
+}
